2004-03-12  Tom Copeland <tom@infoether.com>
	* www/snippet/browse.php & detail.php: Replace user_name with realname.

2004-03-11  Tom Copeland <tom@infoether.com>
	* SQL optimization: Replaced a 'select *' with a 'select count(*)'
	in Forum.class.  Modified query in project_summary.php to limit columns
	returned to those used.

2004-03-08  Tom Copeland <tom@infoether.com>
	* SQL optimization: Replaced 'select *' occurrences in User.class
	and BaseLanguage.class.  Replaced a 'select *' with a 'select count(*)'
	in Group.class.

2004-03-05  Tom Copeland <tom@infoether.com>
	* Added group_id parameter to rss_sfnews.php; did
	some more date->post_date, too.

2004-03-02  Guillaume Smet <guillaume-gforge@smet.org>
	* Applied patch [ #706 ] to improve German localization
	* Improved language_file_merger.php (tools module)
	* Converted doc from Maven xdoc to XML Docbook

2004-03-02  Tom Copeland <tom@infoether.com>
	* Minor cleanups to Base.tab

2004-02-26  Tom Copeland <tom@infoether.com>
	* Applied patch [ #685 ] Translation to PortugueseBrasilian
	* SQL optimization: Replaced 'select *' in PluginManager.class,
	BaseLanguage.class, and ArtifactType.class with explicit column names.
	* Added some PHPDocs to BaseLanguage.class.

2004-02-19  Tom Copeland <tom@infoether.com>
	* Fixed bug [ #693 ] News dates showing up as Jan 1 1970

2004-02-19  Sung Kim <hunkim@cs.ucsc.edu>
	* Rewrite the Survey module
	* Added a general graph module for Survey results

2004-02-19  Guillaume Smet <guillaume-gforge@smet.org>
	
	* merged [ #690 ] by Benoît Sibaud with French.tab cvs version
	* updated french localization again
	* improved localization of task manager
	* fixed ShowResultSet function

2004-02-18  Guillaume Smet <guillaume-gforge@smet.org>
	
	* updated french localization
	* with Christian : applied admin -kkv to enable cvs keywords substitution
	on files which were in -ko mode

2004-02-17  Guillaume Smet <guillaume-gforge@smet.org>
